# opam-monorepo

./: .ocamlformat  CHANGES.md  CODE_OF_CONDUCT.md  Dockerfile.test  README.md  RELEASING.md  dune-project  duniverse.opam  index.html  opam-monorepo.opam  opam-monorepo.opam.locked  opam-monorepo.opam.template
.github/workflows/: populate-changelog-pr-number.yml
cli/: common.ml  common.mli  default.ml  depext.ml  dune  import.ml  init.ml  list_cmd.ml  lock.ml  pin.ml  print_ocaml_compilers.ml  prompt.mli  pull.ml  tools.ml  update.ml
doc/: gen_readme.ml  lock.mld  manage-duniverse.mld  opam-provided.mld  workflows.mld
duniverse-other/opam-file-format/src/: opamParser.ml
duniverse-other/opam/src/state/: opamEnv.ml  opamPackageVar.ml  opamRepositoryState.ml  opamRepositoryState.mli  opamStateTypes.mli  opamSwitchState.ml  opamSwitchState.mli  opamUpdate.ml
duniverse/0install/: 0install-gtk.opam  0install-solver.opam  0install.opam  dune-project
duniverse/dune_/: chrome-trace.opam  dune-action-plugin.opam  dune-build-info.opam  dune-configurator.opam  dune-glob.opam  dune-private-libs.opam  dune-project  dune-rpc-lwt.opam  dune-rpc.opam  dune-site.opam  dune.opam  dyn.opam  fiber.opam  ocamlc-loc.opam  ordering.opam  stdune.opam  xdg.opam
duniverse/dune_/test/blackbox-tests/test-cases/subst/: project-name-restriction.t
duniverse/ocaml-sha/: CHANGES.md  Makefile  dune  dune-project  sha.opam
duniverse/ocaml-sha/.github/workflows/: main.yml
duniverse/ocaml-sha/test/: dune  shatest.ml
duniverse/opam-0install-solver/: CHANGES.md  README.md  dune-project  opam-0install.opam
duniverse/opam-0install-solver/lib/: dir_context.ml  model.ml  model.mli  solver.mli  switch_context.ml
duniverse/opam-0install-solver/test/: test.ml
duniverse/opam-file-format/: CHANGES  opam-file-format.opam
duniverse/opam-file-format/src/: Makefile  opamBaseParser.mly  opamLexer.mll
duniverse/opam-file-format/tests/: fullpos.ml
duniverse/opam-file-format/tests/hygiene/: dune
duniverse/parsexp/: CHANGES.md  parsexp.opam
duniverse/parsexp/bench/: parsexp_vs_sexplib.ml
duniverse/parsexp/fuzz/: parser_equivalence.ml
duniverse/parsexp/prefix/src/: dune
duniverse/parsexp/prefix/test/: coverage.ml  test_atom_prefix.ml  test_sexp_prefix_examples.ml  test_sexp_prefix_quickcheck.ml
duniverse/parsexp/src/: cst.ml  dune  of_sexp_error.ml  parser.ml  parser_intf.ml  parsexp_intf.ml  positions.ml
duniverse/parsexp/src/cinaps/: gen_automaton_tables.ml
duniverse/parsexp/test/: test_coverage.ml  test_parsexp.ml  test_parsexp_conv.ml  test_sexplib_vs_parsexp.ml
duniverse/spdx_licenses/: .gitignore  .ocp-indent  CHANGES.md  LICENSE.txt  README.md  dune-project  spdx_licenses.opam
duniverse/spdx_licenses/src/: dune  exceptionIDs.ml  exceptionIDs.mli  lexer.mli  lexer.mll  licenseIDs.ml  parser.mly  spdx_licenses.ml  spdx_licenses.mli  types.mli
duniverse/spdx_licenses/src/ids/: dune  generate.ml  generate.mli
duniverse/spdx_licenses/tests/: dune  tests.ml
duniverse/swhid_core/: .ocamlformat  CHANGES.md  LICENSE.md  README.md  dune-project  swhid_core.opam
duniverse/swhid_core/.github/workflows/: build.yml  deploy.yml
duniverse/swhid_core/doc/: dune  index.html  index.mld
duniverse/swhid_core/example/: dune  main.ml
duniverse/swhid_core/src/: compute.ml  compute.mli  dune  object.ml  object.mli
duniverse/swhid_core/test/: dune  test.ml
lib/: cloner.ml  config.ml  dev_repo.ml  dev_repo.mli  dune  dune_cmd.ml  dune_file.ml  dune_file.mli  duniverse.ml  duniverse.mli  exec.ml  exec.mli  git.ml  git.mli  git_ref.ml  git_ref.mli  lockfile.ml  lockfile.mli  opam.ml  opam.mli  opam_cmd.ml  opam_solve.ml  opam_solve.mli  parallel.ml  parallel.mli  persist.ml  pin_depends.mli  pins.ml  pp.mli  pp_combinators.ml  pp_combinators.mli  project.ml  pull.ml  pull.mli  repo.ml  repo.mli  serial_shape.ml  serial_shape_list.mll  source_opam_config.ml  types.ml  (+2 more)
opam-monorepo/: concepts.html  faq.html  index.html  lock.html  manage-duniverse.html  opam-provided.html  workflows.html
std/: dune  file.ml  file.mli  option.ml  option.mli
stdext/: list.ml  list.mli  option.ml  option.mli  result.ml  result.mli  string.ml  string.mli
test/: test_duniverse.ml  test_git.ml  test_opam.ml
test/lib/: dune  test_dev_repo.ml  test_duniverse.ml  test_duniverse_lib.ml  test_git_ref.ml  test_git_ref.mli  test_serial_shape.ml  test_solve.ml  test_source_opam_config.ml  test_uri_utils.ml  testable.ml  testable.mli
test/std/: dune  test_duniverse_std.ml  test_file.ml  test_file.mli
