(rule
 (with-stdout-to
  c_flags.sexp
  (run %{ocaml} %{dep:c_flags.ml})))

(library
 (name sha)
 (public_name sha)
 (synopsis "SHA-1 and SHA-2 family implementations")
 (wrapped false)
 (modules sha1 sha256 sha512)
 (libraries stdlib-shims)
 (foreign_stubs
  (language c)
  (flags
   :standard
   (:include c_flags.sexp))
  (names sha1_stubs sha256_stubs sha512_stubs)))
