(lang dune 2.9)

(name sha)
(version v1.15.4)

(source (github djs55/ocaml-sha))

(license ISC)

(authors "Vincent Hanquez"
         "Thomas Gazagnaire"
         "Goswin von Brederlow"
         "Eric Cooper"
         "Florent Monnier"
         "Forrest L Norvell"
         "Vincent Bernadoff"
         "David Scott"
         "Olaf Hering"
         "Arthur Teisseire"
         "Nicolás Ojeda Bär"
         "Christopher Zimmermann"
         "Thomas Leonard"
         "Antonin Décimo"
)

(maintainers dave@recoil.org)

(package
 (name sha)
 (synopsis "Binding to the SHA cryptographic functions")
 (description "This is the binding for SHA interface code in OCaml. Offering the same
interface than the MD5 digest included in the OCaml standard library.
It's currently providing SHA1, SHA256 and SHA512 hash functions.")
 (depends
  (ocaml (>= 4.02))
  (stdlib-shims (>= 0.3.0))
  (ounit2 :with-test)))

(generate_opam_files true)
(formatting disabled)
(use_standard_c_and_cxx_flags true)
