(lang dune 2.7)
(name opam-0install)
(version v0.5)
(formatting disabled)

(generate_opam_files true)

(source (github ocaml-opam/opam-0install-solver))
(authors "talex5@gmail.com")
(maintainers "talex5@gmail.com")
(documentation "https://ocaml-opam.github.io/opam-0install-solver/")
(license ISC)

(package
 (name opam-0install)
 (synopsis "Opam solver using 0install backend")
 (description "\
Opam's default solver is designed to maintain a set of packages
over time, minimising disruption when installing new programs and
finding a compromise solution across all packages.

In many situations (e.g. CI, local roots or duniverse builds) this
is not necessary, and we can get a solution much faster by using
a different algorithm.

This package uses 0install's solver algorithm with opam packages.
")
 (depends
  (fmt (>= 0.8.7))
  (cmdliner (>= 1.1.0))
  (opam-state (>= 2.2.1))
  (opam-format (>= 2.2.1))
  (ocaml (>= 4.10.0))
  0install-solver
  (opam-file-format (>= 2.1.1))
  (opam-client (and :with-test (>= 2.2.1)))
  (opam-solver :with-test)
  (astring :with-test)
  (alcotest :with-test)))
