(lang dune 1.11)

(explicit_js_mode)

(implicit_transitive_deps false)

(name swhid_core)

(license ISC)

(authors
 "Léo Andrès <contact@ndrs.fr>, Dario Pinto <dario.pinto@ocamlpro.com>")

(maintainers "Léo Andrès <contact@ndrs.fr>")

(source
 (github ocamlpro/swhid_core))

(generate_opam_files true)

(package
 (name swhid_core)
 (synopsis "OCaml library to work with swhids.")
 (description
  "swhid_core is an OCaml library to with with Software Heritage persistent identifiers (swhids). This is the core library, for most use cases you should use the swhid library instead.")
 (tags
  (swhid_core
   swhid
   swh
   persistent
   identifiers
   hash
   software
   heritage
   archive))
 (depends
  (ocaml
   (>= 4.03))
  (dune
   (>= 1.11))
  (odoc :with-doc)))
